--- a/docs/style.css
+++ b/docs/style.css
@@ -1,17 +1,92 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+:root{
+  --corPrimary: red; /*exemplo*/
+}
+.flex{
+  display: flex;
+}
+body{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
+header{
+  justify-content: space-between;
+  margin: 2em 5em 0 5em;
+}
+#hero{
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 85%;
+  gap: 2em;
+}
+#hero h1{
+  font-size: 4em;
+}
+#contentHero{
+  flex-direction: column;
+  align-items: center;
+}
+#status, #winner{
+  font-size: 3em;
+}
 .tabuleiro {
   display: grid;
+  background-color: black;
   grid-template-columns: repeat(3, 100px);
   grid-template-rows: repeat(3, 100px);
+  gap: 5px;
+  width: max-content;
+}
+.celula {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0;
+  font-size: 2rem;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+.celula:active{
+  transform: scale(.9);
+}
+#btnPlay {
+  width: 15em;
+  height: 3em;
+  border-radius: 5px;
+  font-size: 1em;
+}
+footer {
+  justify-content: center;
+  font-size: 1.1em;
+  padding-top: 1em;
+}
+footer a{
+  text-decoration: none;
+}
+
+/* Responsavidade para mobile */
+.tabuleiro {
+  display: grid;
+  grid-template-columns: repeat(3, 85px);
+  grid-template-rows: repeat(3, 85px);
   gap: 5px;
   margin: 20px auto;
   width: max-content;
 }
-.celula {
-  background-color: #f0f0f0;
-  border: 1px solid #333;
-  font-size: 2rem;
-  text-align: center;
-  line-height: 100px;
-  cursor: pointer;
-  user-select: none;
+@media (max-width: 440px) {
+  #hero h1{
+    font-size: 3em;
+  }
+  #status, #winner{
+    font-size: 2em;
+  }
 }
