--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,11 @@
   padding: 0;
 }
 :root{
-  --corPrimary: red; /*exemplo*/
+  --azul1: #0D1B2A;
+  --azul2: #1B263B;
+  --azul3: #415A77;
+  --azul4: #778DA9;
+  --azul5: #E0E1DD;
 }
 .flex{
   display: flex;
@@ -14,27 +18,35 @@ body{
   flex-direction: column;
   width: 100vw;
   height: 100vh;
+  background-color: var(--azul4);
 }
 header{
   justify-content: space-between;
-  margin: 2em 5em 0 5em;
+  align-items: center;
+  padding: 0 5em 0 5em;
+  background-color: var(--azul1);
+  width: 100%;
+  height: 8vh;
+  color: #E0E1DD;
 }
 #hero{
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 85%;
-  gap: 2em;
 }
 #hero h1{
-  font-size: 4em;
+  font-size: 3em;
 }
 #contentHero{
   flex-direction: column;
   align-items: center;
+  background-color: var(--azul5);
+  width: 40%;
+  border-radius: 10px;
 }
 #status, #winner{
-  font-size: 3em;
+  font-size: 2.5em;
 }
 .tabuleiro {
   display: grid;
@@ -59,15 +71,24 @@ header{
   transform: scale(.9);
 }
 #btnPlay {
+  visibility: hidden;
+  margin-top: 1em;
   width: 15em;
   height: 3em;
   border-radius: 5px;
   font-size: 1em;
+  background-color: var(--azul2);
+  color: var(--azul5);
+}
+#btnPlay:hover, #btnPlay:active{
+  background-color: var(--azul3);
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 footer {
   justify-content: center;
   font-size: 1.1em;
-  padding-top: 1em;
 }
 footer a{
   text-decoration: none;
@@ -83,6 +104,9 @@ footer a{
   width: max-content;
 }
 @media (max-width: 440px) {
+  #hero{
+      justify-content: center;
+  }
   #hero h1{
     font-size: 3em;
   }
