--- a/docs/style.css
+++ b/docs/style.css
@@ -25,7 +25,7 @@ header{
   align-items: center;
   padding: 0 5em 0 5em;
   background-color: var(--azul1);
-  width: 100%;
+  width: 100vw;
   height: 8vh;
   color: #E0E1DD;
 }
@@ -43,6 +43,7 @@ header{
   align-items: center;
   background-color: var(--azul5);
   width: 40%;
+  min-width: 350px;
   border-radius: 10px;
 }
 #status, #winner{
@@ -54,7 +55,6 @@ header{
   grid-template-columns: repeat(3, 100px);
   grid-template-rows: repeat(3, 100px);
   gap: 5px;
-  width: max-content;
 }
 .celula {
   display: flex;
@@ -97,6 +97,7 @@ footer a{
 /* Responsavidade para mobile */
 .tabuleiro {
   display: grid;
+  box-sizing: border-box;
   grid-template-columns: repeat(3, 85px);
   grid-template-rows: repeat(3, 85px);
   gap: 5px;
